# ros_2017

2303/: readme.txt
2303/Kanushin/lab2/: CMakeLists.txt  README.md  package.xml
2303/Kanushin/lab2/scripts/: spaceship.py  terminal.py  tools.py
2303/Kanushin/lab2/srv/: Repair.srv
2303/Kanushin/lab3/: CMakeLists.txt  config.rviz  package.xml
2303/Kanushin/lab3/scripts/: ai_controller.py  button_controller.py  controller.py  main.py  robot.py  settings.py  weapon.py
2303/Kozlov/lab2/: readme.md
2303/Kozlov/lab2/studentstudying/: CMakeLists.txt  package.xml
2303/Kozlov/lab2/studentstudying/msg/: Lab.msg
2303/Kozlov/lab2/studentstudying/src/: PostGraduate.py  Studying.py
2303/Kozlov/lab2/studentstudying/srv/: Professor.srv
2303/Kozlov/lab3/: Arena.py  Controlls.py  Getch.py  NinjaAi.py  Nunchuck.py  RoboNinja.py  autorun.launch
2303/Kurishev/lab2/: readme.txt
2303/Kurishev/lab2/airplane/: CMakeLists.txt  airplane.launch  engines.launch  model.xml  package.xml
2303/Kurishev/lab2/airplane/src/: engine1.cpp  engine2.cpp  engine3.cpp  engine4.cpp  engine5.cpp  master.cpp  repair_engine.cpp  repair_engine_server.cpp  state_publisher.cpp
2303/Kurishev/lab2/airplane/srv/: repair_engine.srv
2303/Kurishev/lab3/: readme.txt
2303/Kurishev/lab3/using_markers/: CMakeLists.txt  package.xml
2303/Kurishev/lab3/using_markers/src/: shapes.cpp
2303/Mokretsov/lab2/: readme.md
2303/Mokretsov/lab2/server_site/: CMakeLists.txt  package.xml
2303/Mokretsov/lab2/server_site/msg/: Page.msg
2303/Mokretsov/lab2/server_site/src/: client.cpp  page_blog.cpp  page_index.cpp  page_login.cpp  server.cpp
2303/Mokretsov/lab2/server_site/srv/: SrvMessage.srv
2303/Skorospelov/lab2/ddos/: CMakeLists.txt  package.xml
2303/Skorospelov/lab2/src/ddos/: CMakeLists.txt  package.xml
2303/Skorospelov/lab2/src/ddos/launch/: launchme.launch
2303/Skorospelov/lab2/src/ddos/src/: node.cpp
2303/Skorospelov/lab2/src/ddos/srv/: msgs.srv
2303/Zaborovskiy/: наборкомманд
2303/Zaborovskiy/lab1/: CMakeLists.txt
2303/Zaborovskiy/lab2/: CMakeLists.txt  autorun.launch  package.xml  readme.md
2303/Zaborovskiy/lab2/src/: DeepThought.py  Processor.py
2303/Zaborovskiy/lab2/srv/: Calculator.srv
2303/Zaborovskiy/lab3/: CMakeLists.txt  autorun.launch  frames.gv  package.xml  readme.txt
2303/Zaborovskiy/lab3/src/: getch.py  hand.py  input.py  level.rviz  robot.py  server.py
2303/Zaborovskiy/lab4/: readme.txt
2304/: readme.txt
2304/Chayka/lab_2/student/: CMakeLists.txt  package.xml  study.launch
2304/Chayka/lab_2/student/src/: master.cpp  math.cpp  physics.cpp  prog.cpp
2304/Chayka/lab_3/robofight/: CMakeLists.txt  Readme.md  fight.launch  package.xml  rviz.rviz
2304/Chayka/lab_3/robofight/src/: arbiter.cpp  keys.cpp  robot.cpp
2304/Danilov/: ROS1.doc  ROS2.doc  ROS3.doc  Отчёт по курсовой работе.docx
2304/Danilov/Lab2/: README.MD
2304/Danilov/Lab2/patientpy/: CMakeLists.txt  package.xml
2304/Danilov/Lab2/patientpy/msg/: Part.msg
2304/Danilov/Lab2/patientpy/src/: Dying.py  Intern.py  Nurse.py
2304/Danilov/Lab2/patientpy/srv/: Doctor.srv
2304/Danilov/Lab3/: README.MD
2304/Danilov/Lab3/robowars/: CMakeLists.txt  package.xml
2304/Danilov/Lab3/robowars/launch/: game.launch
2304/Danilov/Lab3/robowars/src/: AIController.py  Controller.py  (+6 more)
2304/Danilov/robo-soccer/: ai.py  creature.py  main.py
2304/EfremovMA/lab2/: service.py
2304/EfremovMA/lab2_c/: CMakeLists.txt  package.xml
2304/EfremovMA/lab2_c/launch/: run.launch  run_drives.launch
2304/EfremovMA/lab2_c/msg/: DriveUnitStatus.msg  RobotControl.msg
2304/EfremovMA/lab2_c/src/: drive_unit.cpp  map_service.cpp  repair_service.cpp  robot.cpp  robot_control.cpp  trickster.cpp
2304/EfremovMA/lab2_c/srv/: LocatingSrv.srv  MovingSrv.srv  RepairingSrv.srv
2304/Klimuk/lab2/: readme.txt
2304/Klimuk/lab2/lab2/: CMakeLists.txt  package.xml
2304/Klimuk/lab2/lab_msgs/: CMakeLists.txt  package.xml
2304/Klimuk/lab2/lab_srvs/: CMakeLists.txt  package.xml
2304/Klimuk/lab3/: CMakeLists.txt  package.xml  readme.txt
2304/Klimuk/lab3/lab3/: CMakeLists.txt  package.xml  run.launch  test_level.rviz
2304/Klimuk/lab3/lab_msgs/: CMakeLists.txt
2304/Klimuk/lab3/lab_srvs/: CMakeLists.txt
2304/Komarov/: ROS1.doc  ROS2.doc  ROS3.doc
2304/Komarov/lab_2/: readme.txt
2304/Komarov/lab_2/bicycle/: CMakeLists.txt  bicycle.launch  package.xml
2304/Komarov/lab_3/using_markers/: CMakeLists.txt  Readme.md  package.xml  using_markers.launch
2304/Kuzmin/lab3/: .gitignore  README.md
2304/Kuzmin/lab3/src/battlebots_gazebo_plugin/: CMakeLists.txt  package.xml
2304/Kuzmin/lab3/src/battlebots_gazebo_plugin/launch/: sim.launch
2304/Kuzmin/lab3/src/battlebots_gazebo_plugin/src/: battlebots_plugin.cc
2304/Kuzmin/lab3/src/battlebots_gazebo_plugin/worlds/: scene.world
2304/Kuzmin/lab3_ver2/: .gitignore
2304/Likhachev/: Readme.txt
2304/Likhachev/lb1/: CMakeLists.txt  package.xml
2304/Likhachev/lb1/src/: labyr.txt  publisher.py  subscriber.py
2304/Motovilov/lab1/: README.md
2304/Motovilov/lab2/: README.md
2304/Motovilov/lab2/handyman/: CMakeLists.txt  package.xml
2304/Motovilov/lab2/handyman/include/handyman/: plain.h
2304/Motovilov/lab2/handyman/src/: kbhit.cpp  master.cpp  plainSystem.cpp
2304/Motovilov/lab2/handyman/srv/: Repair.srv
2304/Motovilov/lab3/: README.md
2304/Motovilov/lab3/battlerobots/: CMakeLists.txt  battlerobot.launch  package.xml  rvizconfig.rviz
2304/Motovilov/lab3/battlerobots/src/: arena.cpp  bot.cpp  teleop.cpp
2304/Starikov/Lab2/DyingHumanSimulator/: CMakeLists.txt  package.xml
2304/Starikov/Lab2/beginner_tutorials/: package.xml
2304/Starikov/Lab3/rviz_suffering/: CMakeLists.txt  package.xml  readme.txt  rvizConf.rviz
2304/Volkov/: ROS II.doc  ROS III.doc
2304/Volkov/lab2/: CMakeLists.txt  package.xml  readme.txt
2304/Volkov/lab2/scripts/: add_two_ints_client.py  add_two_ints_server.py  publisher.py  subscriber.py
2304/Volkov/lab3/: CMakeLists.txt  fight.launch  package.xml  readme.md  rviz.rviz
2304/Volkov/lab3/src/: battler.cpp  keys.cpp  restorator.cpp
(+49 files in other folders)
